[metadata]
name = pylint-fixme-info
version = 1.0.2
author = Max Meinhold
author_email = mxmeinhold@gmail.com
description = A pylint checker for reporting fixmes with Info level
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
url = "https://github.com/mxmeinhold/pylint-fixme-info"
project_urls = Bug Tracker = "https://github.com/mxmeinhold/pylint-fixme-info/issues"
keywords = pylint, linting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=3.7
packages = pylint_fixme_info
install_requires = pylint>=2.5.0
